AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = testtool
testtool_SOURCES = config.cpp config.h \
		   healthcheck.cpp healthcheck.h \
		   healthcheck_dns.cpp healthcheck_dns.h \
		   healthcheck_http.cpp healthcheck_http.h \
		   healthcheck_ping.cpp healthcheck_ping.h \
		   healthcheck_postgres.cpp healthcheck_postgres.h \
		   healthcheck_tcp.cpp healthcheck_tcp.h \
		   lb_node.cpp lb_node.h lb_pool.cpp lb_pool.h \
		   msg.cpp msg.h \
		   pfctl.cpp pfctl.h pfctl_worker.cpp pfctl_worker.h\
		   testtool.cpp testtool.h

